Fix menu now shown on mobile view.

--- a/sass/theme/_navigation.scss
+++ b/sass/theme/_navigation.scss
@@ -107,7 +107,7 @@
   // !== Menu
 
   // Menu toggled
-  &.toggled > ul.menu {
+  &.toggled ul.menu {
     display: block;
   }
 }
